# hello-pyfortran

./: .gitignore  README.md  meson.build  pyproject.toml
.github/workflows/: build.yml
scripts/: gen_pyf.sh
src/: euclidian_norm.f90
src/hellopyfortran/: __main__.py
