[project]
name = "hellopyfortran"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
]

[project.scripts]
hellopyfortran = "hellopyfortran.main:main"

[build-system]
requires = ["meson-python>=0.16", "numpy>=2.4.0"]
build-backend = "mesonpy"
